--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -34,9 +34,8 @@ Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
-Mcu.IP10=USART1
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=DCMI
 Mcu.IP3=I2C1
 Mcu.IP4=I2C2
@@ -45,7 +44,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=RTC
 Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IPNb=12
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -66,36 +65,34 @@ Mcu.Pin21=PC7
 Mcu.Pin22=PC8
 Mcu.Pin23=PC9
 Mcu.Pin24=PA8
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA11
-Mcu.Pin28=PA12
-Mcu.Pin29=PA15 (JTDI)
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA15 (JTDI)
+Mcu.Pin28=PC11
+Mcu.Pin29=PD0
 Mcu.Pin3=PE5
-Mcu.Pin30=PC11
-Mcu.Pin31=PD0
-Mcu.Pin32=PD1
-Mcu.Pin33=PD3
-Mcu.Pin34=PD7
-Mcu.Pin35=PB3 (JTDO/TRACESWO)
-Mcu.Pin36=PB4 (NJTRST)
-Mcu.Pin37=PB5
-Mcu.Pin38=PB6
-Mcu.Pin39=PB7
+Mcu.Pin30=PD1
+Mcu.Pin31=PD3
+Mcu.Pin32=PD7
+Mcu.Pin33=PB3 (JTDO/TRACESWO)
+Mcu.Pin34=PB4 (NJTRST)
+Mcu.Pin35=PB5
+Mcu.Pin36=PB6
+Mcu.Pin37=PB7
+Mcu.Pin38=PB8
+Mcu.Pin39=PB9
 Mcu.Pin4=PE6
-Mcu.Pin40=PB8
-Mcu.Pin41=PB9
-Mcu.Pin42=PE0
-Mcu.Pin43=PE1
-Mcu.Pin44=VP_RTC_VS_RTC_Activate
-Mcu.Pin45=VP_SYS_VS_Systick
-Mcu.Pin46=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PE0
+Mcu.Pin41=PE1
+Mcu.Pin42=VP_RTC_VS_RTC_Activate
+Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin44=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA4
 Mcu.Pin6=PA6
 Mcu.Pin7=PB0
 Mcu.Pin8=PB2
 Mcu.Pin9=PB11
-Mcu.PinsNb=47
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -119,8 +116,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -137,8 +132,6 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=LED4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=POWER_RST
 PB0.Locked=true
@@ -288,7 +281,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
@@ -346,8 +339,6 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.VCOSAI2OutputFreq_Value=32000000
-USART1.IPParameters=VirtualMode-Asynchronous
-USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
