--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -1,4 +1,18 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV128
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=DISABLE
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,Overrun,NbrOfConversion,ClockPrescaler,EOCSelection,DiscontinuousConvMode,master
+ADC1.NbrOfConversion=1
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Overrun=ADC_OVR_DATA_PRESERVED
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -23,6 +37,7 @@ CAN2.TXFP=ENABLE
 DCMI.IPParameters=JPEGMode
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00B07CB4
 I2C2.IPParameters=Timing
@@ -32,67 +47,85 @@ I2C4.Timing=0x00503D58
 KeepUserPlacement=false
 Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
-Mcu.IP0=CAN1
-Mcu.IP1=CAN2
-Mcu.IP10=USB_DEVICE
-Mcu.IP11=USB_OTG_FS
-Mcu.IP2=DCMI
-Mcu.IP3=I2C1
-Mcu.IP4=I2C2
-Mcu.IP5=I2C4
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=RTC
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP0=ADC1
+Mcu.IP1=CAN1
+Mcu.IP10=SYS
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=CAN2
+Mcu.IP3=DCMI
+Mcu.IP4=I2C1
+Mcu.IP5=I2C2
+Mcu.IP6=I2C4
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=RTC
+Mcu.IPNb=13
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PD10
-Mcu.Pin17=PD12
-Mcu.Pin18=PD13
-Mcu.Pin19=PD15
-Mcu.Pin2=PE4
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PA8
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA15 (JTDI)
-Mcu.Pin28=PC11
-Mcu.Pin29=PD0
-Mcu.Pin3=PE5
-Mcu.Pin30=PD1
-Mcu.Pin31=PD3
-Mcu.Pin32=PD7
-Mcu.Pin33=PB3 (JTDO/TRACESWO)
-Mcu.Pin34=PB4 (NJTRST)
-Mcu.Pin35=PB5
-Mcu.Pin36=PB6
-Mcu.Pin37=PB7
-Mcu.Pin38=PB8
-Mcu.Pin39=PB9
-Mcu.Pin4=PE6
-Mcu.Pin40=PE0
-Mcu.Pin41=PE1
-Mcu.Pin42=VP_RTC_VS_RTC_Activate
-Mcu.Pin43=VP_SYS_VS_Systick
-Mcu.Pin44=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin0=PE4
+Mcu.Pin1=PE5
+Mcu.Pin10=PC5
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PE11
+Mcu.Pin15=PE12
+Mcu.Pin16=PE13
+Mcu.Pin17=PE14
+Mcu.Pin18=PE15
+Mcu.Pin19=PB10
+Mcu.Pin2=PE6
+Mcu.Pin20=PB11
+Mcu.Pin21=PB12
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PD8
+Mcu.Pin26=PD9
+Mcu.Pin27=PD10
+Mcu.Pin28=PD11
+Mcu.Pin29=PD12
+Mcu.Pin3=PC2
+Mcu.Pin30=PD13
+Mcu.Pin31=PD14
+Mcu.Pin32=PD15
+Mcu.Pin33=PC6
+Mcu.Pin34=PC7
+Mcu.Pin35=PC8
+Mcu.Pin36=PC9
+Mcu.Pin37=PA8
+Mcu.Pin38=PA9
+Mcu.Pin39=PA10
+Mcu.Pin4=PC3
+Mcu.Pin40=PA11
+Mcu.Pin41=PA12
+Mcu.Pin42=PA15 (JTDI)
+Mcu.Pin43=PC11
+Mcu.Pin44=PD0
+Mcu.Pin45=PD1
+Mcu.Pin46=PD3
+Mcu.Pin47=PD4
+Mcu.Pin48=PD5
+Mcu.Pin49=PD7
 Mcu.Pin5=PA4
-Mcu.Pin6=PA6
-Mcu.Pin7=PB0
-Mcu.Pin8=PB2
-Mcu.Pin9=PB11
-Mcu.PinsNb=45
+Mcu.Pin50=PB3 (JTDO/TRACESWO)
+Mcu.Pin51=PB4 (NJTRST)
+Mcu.Pin52=PB5
+Mcu.Pin53=PB6
+Mcu.Pin54=PB7
+Mcu.Pin55=PB8
+Mcu.Pin56=PB9
+Mcu.Pin57=PE0
+Mcu.Pin58=PE1
+Mcu.Pin59=VP_RTC_VS_RTC_Activate
+Mcu.Pin6=PA5
+Mcu.Pin60=VP_SYS_VS_Systick
+Mcu.Pin61=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=62
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -116,27 +149,41 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Locked=true
+PA10.Signal=USART1_RX
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
 PA15\ (JTDI).GPIOParameters=GPIO_Label
-PA15\ (JTDI).GPIO_Label=LED5
+PA15\ (JTDI).GPIO_Label=LED3
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Output
 PA4.Mode=Slave_8_bits_External_Synchro
 PA4.Signal=DCMI_HSYNC
+PA5.Locked=true
+PA5.Signal=SPI1_SCK
 PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
+PA7.Locked=true
+PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=LED4
+PA8.GPIO_Label=LED5
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=POWER_RST
 PB0.Locked=true
 PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=USART3_RTS
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=I2C1_RST
+PB10.Locked=true
+PB10.Signal=GPIO_Output
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB12.GPIOParameters=GPIO_Label
@@ -186,6 +233,14 @@ PC11.GPIO_Label=CAMERA_HW_CLK
 PC11.Locked=true
 PC11.PinState=GPIO_PIN_SET
 PC11.Signal=GPIO_Output
+PC2.Locked=true
+PC2.Signal=SharedAnalog_PC2
+PC3.Locked=true
+PC3.Signal=SharedAnalog_PC3
+PC4.Locked=true
+PC4.Signal=USART3_TX
+PC5.Locked=true
+PC5.Signal=USART3_RX
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
 PC7.Mode=Slave_8_bits_External_Synchro
@@ -202,18 +257,32 @@ PD10.GPIOParameters=GPIO_Label
 PD10.GPIO_Label=LED2
 PD10.Locked=true
 PD10.Signal=GPIO_Output
+PD11.Locked=true
+PD11.Signal=USART3_CTS
 PD12.Locked=true
 PD12.Mode=I2C
 PD12.Signal=I2C4_SCL
 PD13.Locked=true
 PD13.Mode=I2C
 PD13.Signal=I2C4_SDA
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=ENABLE_C
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD15.GPIOParameters=GPIO_Label
-PD15.GPIO_Label=LED3
+PD15.GPIO_Label=LED4
 PD15.Locked=true
 PD15.Signal=GPIO_Output
 PD3.Mode=Slave_8_bits_External_Synchro
 PD3.Signal=DCMI_D5
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=ENABLE_A
+PD4.Locked=true
+PD4.Signal=GPIO_Output
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=ENABLE_B
+PD5.Locked=true
+PD5.Signal=GPIO_Output
 PD7.GPIOParameters=GPIO_Label
 PD7.GPIO_Label=CAMERA_STROBE
 PD7.Locked=true
@@ -234,23 +303,29 @@ PE1.GPIOParameters=GPIO_Label
 PE1.GPIO_Label=CAN2_SHTD
 PE1.Locked=true
 PE1.Signal=GPIO_Output
-PE2.GPIOParameters=PinState,GPIO_Label
-PE2.GPIO_Label=CAMERA_S0
-PE2.Locked=true
-PE2.PinState=GPIO_PIN_SET
-PE2.Signal=GPIO_Output
-PE3.GPIOParameters=PinState,GPIO_Label
-PE3.GPIO_Label=CAMERA_S1
-PE3.Locked=true
-PE3.PinState=GPIO_PIN_SET
-PE3.Signal=GPIO_Output
+PE11.Locked=true
+PE11.Signal=GPXTI11
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=SPI1_CS_MRAM
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=SPI1_CS_FLASH2
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.Locked=true
+PE14.Signal=SPI1_MISO
+PE15.GPIOParameters=GPIO_Label
+PE15.GPIO_Label=SPI1_CS_FLASH1
+PE15.Locked=true
+PE15.Signal=GPIO_Output
 PE4.Mode=Slave_8_bits_External_Synchro
 PE4.Signal=DCMI_D4
 PE5.Mode=Slave_8_bits_External_Synchro
 PE5.Signal=DCMI_D6
 PE6.Mode=Slave_8_bits_External_Synchro
 PE6.Signal=DCMI_D7
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
@@ -281,7 +356,8 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true
+RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
@@ -303,7 +379,7 @@ RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4CLockSelection=RCC_I2C4CLKSOURCE_HSI
 RCC.I2C4Freq_Value=16000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPUART1Freq_Value=32000000
@@ -316,15 +392,16 @@ RCC.PLLN=32
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
-RCC.PLLSAI1PoutputFreq_Value=16000000
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
+RCC.PLLSAI1N=16
+RCC.PLLSAI1PoutputFreq_Value=32000000
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
 RCC.PLLSAI2PoutputFreq_Value=16000000
 RCC.PLLSAI2RoutputFreq_Value=16000000
 RCC.PWRFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=16000000
-RCC.SAI2Freq_Value=16000000
+RCC.SAI1Freq_Value=32000000
+RCC.SAI2Freq_Value=32000000
 RCC.SDMMCFreq_Value=48000000
 RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=64000000
@@ -337,8 +414,16 @@ RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
-RCC.VCOSAI1OutputFreq_Value=32000000
+RCC.VCOSAI1OutputFreq_Value=64000000
 RCC.VCOSAI2OutputFreq_Value=32000000
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.SharedAnalog_PC2.0=GPIO_Analog
+SH.SharedAnalog_PC2.1=ADC1_IN3,IN3-Single-Ended
+SH.SharedAnalog_PC2.ConfNb=2
+SH.SharedAnalog_PC3.0=GPIO_Analog
+SH.SharedAnalog_PC3.1=ADC1_IN4
+SH.SharedAnalog_PC3.ConfNb=2
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
