--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -36,31 +36,95 @@ CAN2.Prescaler=2
 CAN2.TXFP=ENABLE
 DCMI.IPParameters=JPEGMode
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
+Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.0.Instance=DMA1_Channel7
+Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.0.Mode=DMA_NORMAL
+Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.1.Instance=DMA1_Channel6
+Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.1.Mode=DMA_NORMAL
+Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C2_RX.4.Instance=DMA1_Channel5
+Dma.I2C2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_RX.4.Mode=DMA_NORMAL
+Dma.I2C2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C2_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C2_TX.5.Instance=DMA1_Channel4
+Dma.I2C2_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_TX.5.Mode=DMA_NORMAL
+Dma.I2C2_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C4_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C4_RX.2.Instance=DMA2_Channel1
+Dma.I2C4_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C4_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C4_RX.2.Mode=DMA_NORMAL
+Dma.I2C4_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C4_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C4_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C4_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C4_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C4_TX.3.Instance=DMA2_Channel2
+Dma.I2C4_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C4_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.I2C4_TX.3.Mode=DMA_NORMAL
+Dma.I2C4_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C4_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C4_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.I2C4_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=I2C1_RX
+Dma.Request1=I2C1_TX
+Dma.Request2=I2C4_RX
+Dma.Request3=I2C4_TX
+Dma.Request4=I2C2_RX
+Dma.Request5=I2C2_TX
+Dma.RequestsNb=6
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
+I2C1.I2C_Rise_Time=100
+I2C1.IPParameters=Timing,Speed,I2C_Rise_Time
+I2C1.Speed=100
 I2C1.Timing=0x00B07CB4
 I2C2.IPParameters=Timing
 I2C2.Timing=0x00B07CB4
 I2C4.IPParameters=Timing
-I2C4.Timing=0x00503D58
+I2C4.Timing=0x00B07CB4
 KeepUserPlacement=false
 Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=SYS
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=RTC
+Mcu.IP11=SYS
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=CAN2
 Mcu.IP3=DCMI
-Mcu.IP4=I2C1
-Mcu.IP5=I2C2
-Mcu.IP6=I2C4
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=RTC
-Mcu.IPNb=13
+Mcu.IP4=DMA
+Mcu.IP5=I2C1
+Mcu.IP6=I2C2
+Mcu.IP7=I2C4
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=14
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
@@ -138,6 +202,12 @@ NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -180,10 +250,14 @@ PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=USART3_RTS
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB10.GPIO_Label=I2C1_RST
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
+PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB12.GPIOParameters=GPIO_Label
@@ -222,9 +296,13 @@ PB6.Mode=CAN_Activate
 PB6.Signal=CAN2_TX
 PB7.Mode=Slave_8_bits_External_Synchro
 PB7.Signal=DCMI_VSYNC
+PB8.GPIOParameters=GPIO_FM8
+PB8.GPIO_FM8=SYSCFG_FASTMODEPLUS_PB8
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_FM9
+PB9.GPIO_FM9=SYSCFG_FASTMODEPLUS_PB9
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
@@ -356,53 +434,38 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_DCMI_Init-DCMI-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=64000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB1TimFreq_Value=32000000
 RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=64000000
+RCC.APB2TimFreq_Value=32000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CortexFreq_Value=64000000
 RCC.DFSDMFreq_Value=32000000
 RCC.FCLKCortexFreq_Value=64000000
-RCC.FamilyName=M
 RCC.HCLKFreq_Value=64000000
-RCC.HSE_VALUE=8000000
-RCC.HSI48_VALUE=48000000
-RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
 RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
-RCC.I2C4CLockSelection=RCC_I2C4CLKSOURCE_HSI
-RCC.I2C4Freq_Value=16000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.I2C4Freq_Value=32000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPUART1Freq_Value=32000000
-RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
-RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MSI_VALUE=4000000
-RCC.PLLN=32
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
-RCC.PLLSAI1N=16
 RCC.PLLSAI1PoutputFreq_Value=32000000
 RCC.PLLSAI1QoutputFreq_Value=32000000
 RCC.PLLSAI1RoutputFreq_Value=32000000
 RCC.PLLSAI2PoutputFreq_Value=16000000
 RCC.PLLSAI2RoutputFreq_Value=16000000
 RCC.PWRFreq_Value=64000000
-RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=32000000
 RCC.SAI2Freq_Value=32000000
-RCC.SDMMCFreq_Value=48000000
 RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -411,7 +474,6 @@ RCC.UART5Freq_Value=32000000
 RCC.USART1Freq_Value=32000000
 RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=32000000
-RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOSAI1OutputFreq_Value=64000000
@@ -422,7 +484,7 @@ SH.SharedAnalog_PC2.0=GPIO_Analog
 SH.SharedAnalog_PC2.1=ADC1_IN3,IN3-Single-Ended
 SH.SharedAnalog_PC2.ConfNb=2
 SH.SharedAnalog_PC3.0=GPIO_Analog
-SH.SharedAnalog_PC3.1=ADC1_IN4
+SH.SharedAnalog_PC3.1=ADC1_IN4,IN4-Single-Ended
 SH.SharedAnalog_PC3.ConfNb=2
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
