--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV128
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV16
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=DISABLE
 ADC1.DiscontinuousConvMode=DISABLE
@@ -19,23 +19,21 @@ CAD.provider=
 CAN1.AWUM=ENABLE
 CAN1.BS1=CAN_BS1_13TQ
 CAN1.BS2=CAN_BS2_2TQ
-CAN1.CalculateBaudRate=500000
-CAN1.CalculateTimeBit=2000
-CAN1.CalculateTimeQuantum=125.0
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=62.5
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,AWUM,TXFP
 CAN1.Prescaler=2
 CAN1.TXFP=ENABLE
 CAN2.AWUM=ENABLE
 CAN2.BS1=CAN_BS1_13TQ
 CAN2.BS2=CAN_BS2_2TQ
-CAN2.CalculateBaudRate=500000
-CAN2.CalculateTimeBit=2000
-CAN2.CalculateTimeQuantum=125.0
+CAN2.CalculateBaudRate=1000000
+CAN2.CalculateTimeBit=1000
+CAN2.CalculateTimeQuantum=62.5
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,AWUM,TXFP
 CAN2.Prescaler=2
 CAN2.TXFP=ENABLE
-DCMI.IPParameters=JPEGMode
-DCMI.JPEGMode=DCMI_JPEG_DISABLE
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.I2C1_RX.0.Instance=DMA1_Channel7
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -112,84 +110,75 @@ Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=RTC
-Mcu.IP11=SYS
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
+Mcu.IP10=SYS
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
 Mcu.IP2=CAN2
-Mcu.IP3=DCMI
-Mcu.IP4=DMA
-Mcu.IP5=I2C1
-Mcu.IP6=I2C2
-Mcu.IP7=I2C4
-Mcu.IP8=NVIC
-Mcu.IP9=RCC
-Mcu.IPNb=14
+Mcu.IP3=DMA
+Mcu.IP4=I2C1
+Mcu.IP5=I2C2
+Mcu.IP6=I2C4
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=RTC
+Mcu.IPNb=13
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE4
-Mcu.Pin1=PE5
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB2
-Mcu.Pin14=PE11
-Mcu.Pin15=PE12
-Mcu.Pin16=PE13
-Mcu.Pin17=PE14
-Mcu.Pin18=PE15
-Mcu.Pin19=PB10
-Mcu.Pin2=PE6
-Mcu.Pin20=PB11
-Mcu.Pin21=PB12
-Mcu.Pin22=PB13
-Mcu.Pin23=PB14
-Mcu.Pin24=PB15
-Mcu.Pin25=PD8
-Mcu.Pin26=PD9
-Mcu.Pin27=PD10
-Mcu.Pin28=PD11
-Mcu.Pin29=PD12
-Mcu.Pin3=PC2
-Mcu.Pin30=PD13
-Mcu.Pin31=PD14
-Mcu.Pin32=PD15
-Mcu.Pin33=PC6
-Mcu.Pin34=PC7
-Mcu.Pin35=PC8
-Mcu.Pin36=PC9
-Mcu.Pin37=PA8
-Mcu.Pin38=PA9
-Mcu.Pin39=PA10
-Mcu.Pin4=PC3
-Mcu.Pin40=PA11
-Mcu.Pin41=PA12
-Mcu.Pin42=PA15 (JTDI)
-Mcu.Pin43=PC11
-Mcu.Pin44=PD0
-Mcu.Pin45=PD1
-Mcu.Pin46=PD3
-Mcu.Pin47=PD4
-Mcu.Pin48=PD5
-Mcu.Pin49=PD7
-Mcu.Pin5=PA4
-Mcu.Pin50=PB3 (JTDO/TRACESWO)
-Mcu.Pin51=PB4 (NJTRST)
-Mcu.Pin52=PB5
-Mcu.Pin53=PB6
-Mcu.Pin54=PB7
-Mcu.Pin55=PB8
-Mcu.Pin56=PB9
-Mcu.Pin57=PE0
-Mcu.Pin58=PE1
-Mcu.Pin59=VP_RTC_VS_RTC_Activate
-Mcu.Pin6=PA5
-Mcu.Pin60=VP_SYS_VS_Systick
-Mcu.Pin61=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=62
+Mcu.Pin0=PC2
+Mcu.Pin1=PC3
+Mcu.Pin10=PB2
+Mcu.Pin11=PE11
+Mcu.Pin12=PE12
+Mcu.Pin13=PE13
+Mcu.Pin14=PE14
+Mcu.Pin15=PE15
+Mcu.Pin16=PB10
+Mcu.Pin17=PB11
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
+Mcu.Pin2=PA4
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PD8
+Mcu.Pin23=PD9
+Mcu.Pin24=PD10
+Mcu.Pin25=PD11
+Mcu.Pin26=PD12
+Mcu.Pin27=PD13
+Mcu.Pin28=PD14
+Mcu.Pin29=PD15
+Mcu.Pin3=PA5
+Mcu.Pin30=PA8
+Mcu.Pin31=PA9
+Mcu.Pin32=PA10
+Mcu.Pin33=PA11
+Mcu.Pin34=PA12
+Mcu.Pin35=PA15 (JTDI)
+Mcu.Pin36=PC11
+Mcu.Pin37=PD0
+Mcu.Pin38=PD1
+Mcu.Pin39=PD4
+Mcu.Pin4=PA6
+Mcu.Pin40=PD5
+Mcu.Pin41=PD7
+Mcu.Pin42=PB3 (JTDO/TRACESWO)
+Mcu.Pin43=PB4 (NJTRST)
+Mcu.Pin44=PB5
+Mcu.Pin45=PB6
+Mcu.Pin46=PB7
+Mcu.Pin47=PB8
+Mcu.Pin48=PB9
+Mcu.Pin49=PE0
+Mcu.Pin5=PA7
+Mcu.Pin50=PE1
+Mcu.Pin51=VP_RTC_VS_RTC_Activate
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin53=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -229,12 +218,12 @@ PA15\ (JTDI).GPIOParameters=GPIO_Label
 PA15\ (JTDI).GPIO_Label=LED3
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Output
-PA4.Mode=Slave_8_bits_External_Synchro
-PA4.Signal=DCMI_HSYNC
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.Locked=true
 PA5.Signal=SPI1_SCK
-PA6.Mode=Slave_8_bits_External_Synchro
-PA6.Signal=DCMI_PIXCLK
+PA6.Locked=true
+PA6.Signal=GPIO_Input
 PA7.Locked=true
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
@@ -295,8 +284,8 @@ PB5.Signal=CAN2_RX
 PB6.Locked=true
 PB6.Mode=CAN_Activate
 PB6.Signal=CAN2_TX
-PB7.Mode=Slave_8_bits_External_Synchro
-PB7.Signal=DCMI_VSYNC
+PB7.Locked=true
+PB7.Signal=GPIO_Input
 PB8.GPIOParameters=GPIO_FM8
 PB8.GPIO_FM8=SYSCFG_FASTMODEPLUS_PB8
 PB8.Locked=true
@@ -320,14 +309,6 @@ PC4.Locked=true
 PC4.Signal=USART3_TX
 PC5.Locked=true
 PC5.Signal=USART3_RX
-PC6.Mode=Slave_8_bits_External_Synchro
-PC6.Signal=DCMI_D0
-PC7.Mode=Slave_8_bits_External_Synchro
-PC7.Signal=DCMI_D1
-PC8.Mode=Slave_8_bits_External_Synchro
-PC8.Signal=DCMI_D2
-PC9.Mode=Slave_8_bits_External_Synchro
-PC9.Signal=DCMI_D3
 PD0.Mode=CAN_Activate
 PD0.Signal=CAN1_RX
 PD1.Mode=CAN_Activate
@@ -352,8 +333,6 @@ PD15.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=LED4
 PD15.Locked=true
 PD15.Signal=GPIO_Output
-PD3.Mode=Slave_8_bits_External_Synchro
-PD3.Signal=DCMI_D5
 PD4.GPIOParameters=GPIO_Label
 PD4.GPIO_Label=ENABLE_A
 PD4.Locked=true
@@ -398,12 +377,6 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=SPI1_CS_FLASH1
 PE15.Locked=true
 PE15.Signal=GPIO_Output
-PE4.Mode=Slave_8_bits_External_Synchro
-PE4.Signal=DCMI_D4
-PE5.Mode=Slave_8_bits_External_Synchro
-PE5.Signal=DCMI_D6
-PE6.Mode=Slave_8_bits_External_Synchro
-PE6.Signal=DCMI_D7
 PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -435,60 +408,62 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_DCMI_Init-DCMI-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true
-RCC.ADCFreq_Value=16000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true
+RCC.ADCFreq_Value=32000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
-RCC.CortexFreq_Value=16000000
-RCC.DFSDMFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
+RCC.CortexFreq_Value=32000000
+RCC.DFSDMFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.I2C2Freq_Value=16000000
-RCC.I2C3Freq_Value=16000000
-RCC.I2C4Freq_Value=16000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LPTIM1Freq_Value=16000000
-RCC.LPTIM2Freq_Value=16000000
-RCC.LPUART1Freq_Value=16000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C2Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.I2C4Freq_Value=32000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPTIM2Freq_Value=32000000
+RCC.LPUART1Freq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=16000000
+RCC.MCO1PinFreq_Value=32000000
 RCC.MSI_VALUE=4000000
-RCC.PLLPoutputFreq_Value=16000000
-RCC.PLLQoutputFreq_Value=16000000
-RCC.PLLRCLKFreq_Value=16000000
-RCC.PLLSAI1PoutputFreq_Value=16000000
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
+RCC.PLLN=16
+RCC.PLLPoutputFreq_Value=32000000
+RCC.PLLQoutputFreq_Value=32000000
+RCC.PLLRCLKFreq_Value=32000000
+RCC.PLLSAI1N=16
+RCC.PLLSAI1PoutputFreq_Value=32000000
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
 RCC.PLLSAI2PoutputFreq_Value=16000000
 RCC.PLLSAI2RoutputFreq_Value=16000000
-RCC.PWRFreq_Value=16000000
+RCC.PWRFreq_Value=32000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=16000000
-RCC.SAI2Freq_Value=16000000
+RCC.SAI1Freq_Value=32000000
+RCC.SAI2Freq_Value=32000000
 RCC.SDMMCFreq_Value=48000000
-RCC.SWPMI1Freq_Value=16000000
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.SWPMI1Freq_Value=32000000
+RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=16000000
-RCC.UART5Freq_Value=16000000
-RCC.USART1Freq_Value=16000000
-RCC.USART2Freq_Value=16000000
-RCC.USART3Freq_Value=16000000
+RCC.UART4Freq_Value=32000000
+RCC.UART5Freq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
+RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=32000000
-RCC.VCOSAI1OutputFreq_Value=32000000
+RCC.VCOOutputFreq_Value=64000000
+RCC.VCOSAI1OutputFreq_Value=64000000
 RCC.VCOSAI2OutputFreq_Value=32000000
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
